add changes in response to @normen662